# books-app-backend

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8c09bad52fd6_add_users_and_user_sessions.py
app/: config.py  models.py
app/auth/: dependencies.py  oidc.py  router.py  schemas.py  sessions.py
app/routers/: authors.py  books.py
