[project]
name = "books-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.3.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.48",
]
